# tauri-plugin-nativecamera

./: Cargo.toml  README.md  build.rs  package.json  tsconfig.json
android/: build.gradle.kts
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: Example.kt  NativeCameraPlugin.kt
android/src/test/java/: ExampleUnitTest.kt
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: NativecameraPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: start_preview.toml  stop_preview.toml  take_picture.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
