[package]
name = "tauri-plugin-nativecamera"
version = "0.1.1"
authors = [ "ZAAFHachemrachid <rachidzaaf9@gmail.com>" ]
description = "Tauri plugin for native camera access"
license = "MIT"
repository = "https://github.com/ZAAFHachemrachid/tauri-plugin-nativecamera"
homepage = "https://github.com/ZAAFHachemrachid/tauri-plugin-nativecamera"
keywords = ["tauri", "plugin", "camera", "mobile"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-nativecamera"

[dependencies]
tauri = { version = "2.11.3" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.3", features = ["build"] }
